fix: 修复过滤器增加失败bug;
