# src/LuckyReport.Server/Models/Filter.cs
@@ -6,7 +6,15 @@ public class Filter
     public string Title { get; set; }
     public string Field { get; set; }
     public FilterType Type { get; set; }
-    public string? DataSource { get; set; }
+    public string? Content { get; set; }
+
+    public int DataSourceId { get; set; }
+    //public DataSource DataSource { get; set; }
+
+    public Filter()
+    {
+    }
+
     public Filter(string title, string field, FilterType type)
     {
         Title = title;
